<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/whereDidIPark"
        android:textColor="#FDFDFC"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonParked"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="90dp"
        android:backgroundTint="#00BCD4"
        android:elevation="10dp"
        android:shadowColor="#000000"
        android:text="@string/saveLocation"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:rippleColor="#FFFFFF"
        app:strokeColor="#4E4444" />

    <Button
        android:id="@+id/buttonFind"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#00BCD4"
        android:text="@string/findCar"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonParked" />

    <Button
        android:id="@+id/buttonAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:width="150dp"
        android:height="40dp"
        android:backgroundTint="#2563EB"
        android:text="@string/aboutMain"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSettings" />

    <TextView
        android:id="@+id/carNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-black"
        android:textColor="#FFFEFE"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/rightArrowButton"
        android:layout_width="60dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#2563EB"
        android:text="@string/arrowRight"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle" />

    <Button
        android:id="@+id/leftArrowButton"
        android:layout_width="60dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#2563EB"
        android:text="@string/arrowLeft"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle" />

    <Button
        android:id="@+id/buttonHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:width="150dp"
        android:height="40dp"
        android:backgroundTint="#2563EB"
        android:text="@string/showHistory"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFind" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:width="150dp"
        android:height="40dp"
        android:backgroundTint="#2563EB"
        android:text="@string/settings"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHistory" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="35dp"
        android:background="#FDFDFD"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle"
        app:srcCompat="@drawable/baseline_directions_car_24" />

    <Button
        android:id="@+id/buttonAddCar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:backgroundTint="#2563EB"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-black"
        android:visibility="gone"
        android:text="@string/addNew"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>